# adjust_home_task

./: .gitignore  MANIFEST.in  Makefile  README.md  TASK.md  db.sqlite3  manage.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
adjust_home_task/: __init__.py  apps.py  settings.py  urls.py  wsgi.py
adjust_home_task/statistics/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
adjust_home_task/statistics/management/commands/: clear_dataset.py  load_dataset.py
adjust_home_task/statistics/migrations/: 0001_initial.py
adjust_home_task/statistics/templates/: report.html
adjust_home_task/statistics/tests/: test_forms.py  test_models.py  test_utils.py  test_views.py
