[metadata]
name = adjust_home_task
# version = < see setup.py >
description = Test task for adjust
long_description = file: README.md
url = https://github.com/gokadi/adjust_home_task
author = gokadi
author_email = gokadi@yandex.ru
license = Other/Proprietary License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8


[options]
python_requires = >=3.8
packages = find:
include_package_data = True

install_requires =
    django~=2.2.12
    django-environ~=0.4

[options.packages.find]
exclude =
    tests

[options.extras_require]
develop =
    tox
testing =
    mypy
    mixer~=6.1.3
    pytest-cov~=2.10.1
    pytest-env~=0.6.2
    pytest-django~=3.9.0
    flake8
    pytest~=6.1.1
    pytest-mock~=3.2.0
    safety~=1.9.0

dist =
    gunicorn
    gevent
